@@ -10,7 +10,7 @@ from waflib import TaskGen
 # major increment <=> incompatible changes
 # minor increment <=> compatible changes (additions)
 # micro increment <=> no interface changes
-SUIL_VERSION       = '0.8.5'
+SUIL_VERSION       = '0.8.7'
 SUIL_MAJOR_VERSION = '0'
 
 # Mandatory waf variables
@@ -65,6 +65,7 @@ def configure(conf):
         conf.env.NODELETE_FLAGS = ['-Wl,-z,nodelete']
 
     autowaf.check_pkg(conf, 'lv2', atleast_version='1.12.0', uselib_store='LV2')
+    autowaf.check_pkg(conf, 'x11', uselib_store='X11')
 
     if not Options.options.no_gtk:
         autowaf.check_pkg(conf, 'gtk+-2.0', uselib_store='GTK2',
@@ -132,6 +133,9 @@ def configure(conf):
 
     if conf.env.HAVE_QT5:
         autowaf.define(conf, 'SUIL_WITH_X11_IN_QT5', 1)
+
+    if conf.env.HAVE_X11:
+        autowaf.define(conf, 'SUIL_WITH_X11', 1)
 
     module_prefix = ''
     module_ext    = ''
@@ -345,6 +349,17 @@ def build(bld):
                   cflags       = cflags,
                   lib          = modlib)
         autowaf.use_lib(bld, obj, 'QT5 LV2')
+
+    if bld.env.SUIL_WITH_X11:
+        obj = bld(features     = 'c cshlib',
+                  source       = 'src/x11.c',
+                  target       = 'suil_x11',
+                  includes     = ['.'],
+                  defines      = ['SUIL_SHARED', 'SUIL_INTERNAL'],
+                  install_path = module_dir,
+                  cflags       = cflags,
+                  lib          = modlib)
+        autowaf.use_lib(bld, obj, 'X11')
 
     # Documentation
     autowaf.build_dox(bld, 'SUIL', SUIL_VERSION, top, out)
